3/13/14 delete TODO.txt
3/13/14 #39 provide navbar-specific icons to improve quality
3/8/14 create 1.0 branch to begin release-candidate testing
3/8/14 #38 zoom buttons: attach handle so that its line cap doesn't appear inside glassNode
# 1.0.0-dev.20 3/6/14
3/6/14 #28 when changing the solute, cancel any multi-touch interaction that may be in progress with the faucets
3/6/14 #25 use atomic method of changing water and solution volume only when both values are changing, otherwise notification may not happen
3/6/14 add check for zero volume in Solution.drain, so that we're not doing unnecessary work every frame
3/6/14 #32 tap-to-dispense fixed on Win+Chrome via a fix to scenery.SimpleDragHandler
3/6/14 #33 fix infinite bounds cycle by changing how we position value in graph indicators
3/6/14 #25 prevent intermediate pH value changes when changing the volume of water and solute simultaneously, so that 'ratio' doesn't update while draining
3/6/14 #26 new colors for 'blood' and 'hand soap', so that H3O+ molecules are visible with 'ratio' feature
3/6/14 move pH probe from 'center' to 'right' position for 'Custom' screen, move meter slightly to left so probe doesn't hit molecule counts
3/6/14 move pH probe behind ratio and molecule counts, so that it doesn't obscure these and looks more like probe is in solution
3/6/14 #37 fix Reset All for graph in 'Custom' screen, use PropertySet for all properties internal to GraphNode
3/6/14 #35 fix Reset All for pH meters, add expandedProperty to viewProperties for both graph and pH meter
# 1.0.0-dev.19 3/5/14
3/5/14 fix potential ordering dependency in how value is positioned in graph indicator
3/5/14 restore 'ratio' feature in production version
3/5/14 #25 ratio performance enhancements: use Float32Array if available, pre-allocate max array size, replace Util.toFixedNumber with Math.round
3/5/14 #25 ratio: store molecule locations so that they don't move when solution volume changes and pH remains constant