@@ -9,6 +9,7 @@ define( function( require ) {
   'use strict';
 
   // imports
+  var Color = require( 'SCENERY/util/Color' );
   var DerivedProperty = require( 'AXON/DerivedProperty' );
   var PHModel = require( 'PH_SCALE/common/model/PHModel' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
@@ -45,8 +46,8 @@ define( function( require ) {
 
     // volume
     thisSolution.volumeProperty = new DerivedProperty( [ thisSolution.soluteVolumeProperty, thisSolution.waterVolumeProperty ],
-      function( soluteVolume, waterVolume ) {
-        return ( thisSolution.ignoreVolumeUpdate ) ? thisSolution.volumeProperty.get() : ( soluteVolume + waterVolume );
+      function() {
+        return ( thisSolution.ignoreVolumeUpdate ) ? thisSolution.volumeProperty.get() : thisSolution.computeVolume();
       }
     );
 
@@ -57,7 +58,7 @@ define( function( require ) {
           return thisSolution.pHProperty.get();
         }
         else {
-          var pH = PHModel.solutionToPH( thisSolution );
+          var pH = thisSolution.computePH();
           if ( pH !== null ) {
             pH = Util.toFixedNumber( pH, PHScaleConstants.PH_METER_DECIMAL_PLACES ); // constrain to the pH meter format, see issue #4
           }
@@ -66,13 +67,16 @@ define( function( require ) {
       } );
 
     // color
-    thisSolution.colorProperty = new DerivedProperty( [ thisSolution.soluteProperty, thisSolution.pHProperty ],
-      function( solute, pH ) {
-        if ( thisSolution.volumeProperty.get() === 0 || thisSolution.soluteVolumeProperty.get() === 0 || thisSolution.isEquivalentToWater() ) {
+    thisSolution.colorProperty = new DerivedProperty( [ thisSolution.soluteProperty, thisSolution.soluteVolumeProperty, thisSolution.waterVolumeProperty ],
+      function( solute, soluteVolume, waterVolume ) {
+        if ( soluteVolume + waterVolume === 0 ) {
+          return Color.BLACK; // no solution, should never see this color displayed
+        }
+        else if ( soluteVolume === 0 || thisSolution.isEquivalentToWater() ) {
           return Water.color;
         }
         else {
-          return solute.computeColor( thisSolution.soluteVolumeProperty.get() / thisSolution.volumeProperty.get() );
+          return solute.computeColor( soluteVolume / ( soluteVolume + waterVolume ) );
         }
       } );
 
@@ -97,7 +101,7 @@ define( function( require ) {
      * Eg, the value displayed to the user is '7.00'.
      */
     isEquivalentToWater: function() {
-      var pHString = Util.toFixed( this.pHProperty.get(), PHScaleConstants.PH_METER_DECIMAL_PLACES );
+      var pHString = Util.toFixed( this.computePH(), PHScaleConstants.PH_METER_DECIMAL_PLACES );
       return ( parseFloat( pHString ) === Water.pH ) && ( this.waterVolumeProperty.get() > 0 );
     },
 
@@ -106,13 +110,13 @@ define( function( require ) {
     //----------------------------------------------------------------------------
 
     // @private
-    isEmpty: function() { return this.volumeProperty.get() === 0; },
+    isEmpty: function() { return this.computeVolume() === 0; },
 
     // @private
-    isFull: function() { return this.volumeProperty.get() === this.maxVolume; },
+    isFull: function() { return this.computeVolume() === this.maxVolume; },
 
     // @private Returns the amount of volume that is available to fill.
-    getFreeVolume: function() { return this.maxVolume - this.volumeProperty.get(); },
+    getFreeVolume: function() { return this.maxVolume - this.computeVolume(); },
 
     // Convenience function for adding solute
     addSolute: function( deltaVolume ) {
@@ -134,7 +138,7 @@ define( function( require ) {
      */
     drainSolution: function( deltaVolume ) {
       if ( deltaVolume > 0 ) {
-        var totalVolume = this.volumeProperty.get();
+        var totalVolume = this.computeVolume();
         if ( totalVolume > 0 ) {
           if ( totalVolume - deltaVolume < MIN_VOLUME ) {
             // drain the remaining solution
@@ -167,15 +171,37 @@ define( function( require ) {
     },
 
     //----------------------------------------------------------------------------
+    // Computations for derived properties
+    //----------------------------------------------------------------------------
+
+    /**
+     * Computes total volume for this solution.
+     * @private Used in internal computations to prevent incorrect intermediate values, see issue #40
+     * @return {Number} liters
+     */
+    computeVolume: function() {
+      return ( this.soluteVolumeProperty.get() + this.waterVolumeProperty.get() );
+    },
+
+    /**
+     * Compute pH for this solution.
+     * @private Used in internal computations to prevent incorrect intermediate values, see issue #40
+     * @return {Number|null} pH, null if total volume is zero
+     */
+    computePH: function() {
+      return PHModel.computePH( this.soluteProperty.get().pH, this.soluteVolumeProperty.get(), this.waterVolumeProperty.get() );
+    },
+
+    //----------------------------------------------------------------------------
     // Concentration (moles/L)
     //----------------------------------------------------------------------------
 
     getConcentrationH3O: function() {
-      return PHModel.pHToConcentrationH3O( this.pHProperty.get() );
+      return PHModel.pHToConcentrationH3O( this.computePH() );
     },
 
     getConcentrationOH: function() {
-      return PHModel.pHToConcentrationOH( this.pHProperty.get() );
+      return PHModel.pHToConcentrationOH( this.computePH() );
     },
 
     getConcentrationH2O: function() {
@@ -187,15 +213,15 @@ define( function( require ) {
     //----------------------------------------------------------------------------
 
     getMoleculesH3O: function() {
-      return PHModel.computeMolecules( this.getConcentrationH3O(), this.volumeProperty.get() );
+      return PHModel.computeMolecules( this.getConcentrationH3O(), this.computeVolume() );
     },
 
     getMoleculesOH: function() {
-      return PHModel.computeMolecules( this.getConcentrationOH(), this.volumeProperty.get() );
+      return PHModel.computeMolecules( this.getConcentrationOH(), this.computeVolume() );
     },
 
     getMoleculesH2O: function() {
-      return PHModel.computeMolecules( this.getConcentrationH2O(), this.volumeProperty.get() );
+      return PHModel.computeMolecules( this.getConcentrationH2O(), this.computeVolume() );
     },
 
     //----------------------------------------------------------------------------
@@ -203,15 +229,15 @@ define( function( require ) {
     //----------------------------------------------------------------------------
 
     getMolesH3O: function() {
-      return PHModel.computeMoles( this.getConcentrationH3O(), this.volumeProperty.get() );
+      return PHModel.computeMoles( this.getConcentrationH3O(), this.computeVolume() );
     },
 
     getMolesOH: function() {
-      return PHModel.computeMoles( this.getConcentrationOH(), this.volumeProperty.get() );
+      return PHModel.computeMoles( this.getConcentrationOH(), this.computeVolume() );
     },
 
     getMolesH2O: function() {
-      return PHModel.computeMoles( this.getConcentrationH2O(), this.volumeProperty.get() );
+      return PHModel.computeMoles( this.getConcentrationH2O(), this.computeVolume() );
     }
   };
 
